[package]
name = "playlist-sorter"
version = "0.1.0"
edition = "2021"
authors = ["Dan Vail"]

[dependencies]
clap = "3.2.17"
rayon = "1.5.3"
anyhow = "1.0.62"
=======

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
clap = { version = "3.2.17", features = ["derive"] }
anyhow = "1.0.62"
serde = { version = "1.0", features = ["derive"] }
